# zkevm-benchmark-workload

./: .gitignore  Cargo.toml  README-profiling.md  README.md
.cargo/: config.toml
crates/benchmark-runner/: Cargo.toml  build.rs
crates/benchmark-runner/src/: block_encoding_length_program.rs  empty_program.rs  guest_programs.rs  lib.rs  runner.rs  stateless_executor.rs  stateless_validator.rs  trie_bench.rs  verification.rs  zisk_eth_client.rs  zisk_profiling.rs
crates/benchmark-runner/src/stateless_executor/: reth.rs
crates/benchmark-runner/src/stateless_validator/: eest.rs  ethrex.rs  fixtures.rs  inputs.rs  reth.rs
crates/benchmark-runner/src/zisk_eth_client/: reth_input.rs
crates/ere-hosts/: Cargo.toml  README.md  readme.md
crates/ere-hosts/src/: cli.rs  main.rs
crates/metrics/: Cargo.toml  README.md
crates/metrics/src/: lib.rs
crates/witness-generator/: Cargo.toml  README.md
crates/witness-generator-cli/: Cargo.toml  Dockerfile  README.md
crates/witness-generator-cli/src/: main.rs
crates/witness-generator-spec-cli/: Cargo.toml
crates/witness-generator-spec-cli/src/: artifact.rs  builder.rs  catalog.rs  chain_config.rs  collector.rs  config.rs  export.rs  lib.rs  main.rs  publish.rs  rpc.rs  schema.rs  serde_helpers.rs
crates/witness-generator-spec-cli/systemd/: README.md  glamsterdam-devnet-5.toml.example  r2.env.example  witness-collector.service  witness-exporter.service  witness-exporter.timer  witness-publisher.service  witness-publisher.timer
crates/witness-generator/src/: blocks_and_witnesses.rs  eest_downloader.rs  eest_generator.rs  generate_stateless_witness.rs  lib.rs  main.rs  raw_input_generator.rs  rpc.rs  rpc_generator.rs  witness_generator.rs
ere-guests/: .gitignore  Cargo.toml
ere-guests/block-encoding-length/guest/: Cargo.toml
ere-guests/block-encoding-length/guest/src/: guest.rs  lib.rs
ere-guests/block-encoding-length/io/: Cargo.toml
ere-guests/block-encoding-length/io/src/: lib.rs
ere-guests/block-encoding-length/sp1/: Cargo.toml
ere-guests/block-encoding-length/sp1/src/: main.rs
ere-guests/empty-program/io/: Cargo.toml
ere-guests/empty-program/io/src/: lib.rs
ere-guests/empty-program/openvm/: Cargo.toml
ere-guests/empty-program/openvm/src/: main.rs
ere-guests/empty-program/pico/: Cargo.toml
ere-guests/empty-program/pico/src/: main.rs
ere-guests/empty-program/risc0/: Cargo.toml
ere-guests/empty-program/risc0/src/: main.rs
ere-guests/empty-program/sp1/: Cargo.toml
ere-guests/empty-program/sp1/src/: main.rs
ere-guests/empty-program/zisk/: Cargo.toml
ere-guests/empty-program/zisk/src/: main.rs
ere-guests/libs/: Cargo.toml
ere-guests/libs/src/: blobs.rs  block_ssz.rs  chainconfig.rs  guest.rs  io.rs  lib.rs  mpt.rs  senders.rs
ere-guests/openvm/: Cargo.toml
ere-guests/openvm/src/: main.rs
ere-guests/panic-guest/openvm/: Cargo.toml
ere-guests/panic-guest/openvm/src/: main.rs
ere-guests/panic-guest/pico/: Cargo.toml
ere-guests/panic-guest/pico/src/: main.rs
ere-guests/panic-guest/risc0/: Cargo.toml
ere-guests/panic-guest/risc0/src/: main.rs
ere-guests/panic-guest/sp1/: Cargo.toml
ere-guests/panic-guest/sp1/src/: main.rs
ere-guests/panic-guest/zisk/: Cargo.toml
ere-guests/panic-guest/zisk/src/: main.rs
ere-guests/pico/: Cargo.toml
ere-guests/pico/src/: main.rs
ere-guests/risc0/: Cargo.toml
ere-guests/risc0/guest/: Cargo.toml
ere-guests/risc0/guest/src/: main.rs
ere-guests/rlp-encoding-length/sp1/: Cargo.toml
ere-guests/rlp-encoding-length/sp1/src/: main.rs
ere-guests/sp1/: Cargo.toml
ere-guests/sp1-empty/: Cargo.toml
ere-guests/sp1/src/: main.rs
ere-guests/ssz-encoding-length/sp1/: Cargo.toml
ere-guests/ssz-encoding-length/sp1/src/: main.rs
ere-guests/stateless-executor/: Cargo.toml
ere-guests/stateless-executor/airbender/: Cargo.toml
ere-guests/stateless-executor/airbender/src/: airbender_rt.rs  main.rs
ere-guests/stateless-executor/openvm/: Cargo.toml
ere-guests/stateless-executor/openvm/src/: main.rs
ere-guests/stateless-executor/pico/: Cargo.toml
ere-guests/stateless-executor/pico/src/: main.rs
ere-guests/stateless-executor/risc0/: Cargo.toml
ere-guests/stateless-executor/risc0/guest/: Cargo.toml
ere-guests/stateless-executor/risc0/src/: main.rs
ere-guests/stateless-executor/sp1/: Cargo.toml
ere-guests/stateless-executor/sp1/src/: main.rs
ere-guests/stateless-executor/src/: execution.rs  guest.rs  lib.rs  witness_db.rs
ere-guests/stateless-executor/zisk/: Cargo.toml
ere-guests/stateless-executor/zisk/src/: main.rs
ere-guests/stateless-validator/ethrex/guest/: Cargo.toml
ere-guests/stateless-validator/ethrex/risc0/: Cargo.toml
ere-guests/stateless-validator/ethrex/sp1/: Cargo.toml
ere-guests/stateless-validator/ethrex/zisk/: Cargo.toml
ere-guests/stateless-validator/openvm/: Cargo.toml
ere-guests/stateless-validator/openvm/src/: main.rs
ere-guests/stateless-validator/pico/src/: main.rs
ere-guests/stateless-validator/reth/airbender/: Cargo.toml
ere-guests/stateless-validator/reth/guest/: Cargo.toml
ere-guests/stateless-validator/reth/io/: Cargo.toml
ere-guests/stateless-validator/reth/openvm/: Cargo.toml  openvm.toml
ere-guests/stateless-validator/reth/pico/: Cargo.toml
ere-guests/stateless-validator/risc0/: Cargo.toml
ere-guests/stateless-validator/sp1/: Cargo.toml
ere-guests/stateless-validator/zisk/: Cargo.toml
ere-guests/trie-bench/risc0/: Cargo.toml
ere-guests/zisk/: Cargo.toml
ere-guests/zisk/src/: main.rs
ere-guests/zkm/: Cargo.toml
ere-guests/zkm/src/: main.rs
minimal-repo/: Cargo.toml
minimal-repo/program/: Cargo.toml
minimal-repo/program/src/: main.rs
minimal-repo/script/: Cargo.toml
minimal-repo/witness-generator/: Cargo.toml
minimal-repo/witness-generator/src/: generate_stateless_witness.rs
profiling-crates/profile-runner/: Cargo.toml
profiling-crates/profile-runner/src/: main.rs
profiling-guests/risc0/guest/: Cargo.toml
tests/: Cargo.toml
tests/src/: empty_program.rs  lib.rs  panic_guest.rs  stateless_validator.rs  utils.rs  witness.rs
(+224 files in other folders)
