[workspace]
members = [
    "crates/metrics",
    "crates/witness-generator",
    "crates/witness-generator-cli",
    "crates/ere-hosts",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.unused_crate_dependencies = "deny"
rustdoc.all = "warn"

[workspace.lints.clippy]
# These are some of clippy's nursery (i.e., experimental) lints that we like.
# By default, nursery lints are allowed. Some of the lints below have made good
# suggestions which we fixed. The others didn't have any findings, so we can
# assume they don't have that many false positives. Let's enable them to
# prevent future problems.
borrow_as_ptr = "warn"
branches_sharing_code = "warn"
clear_with_drain = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
dbg_macro = "warn"
derive_partial_eq_without_eq = "warn"
doc_markdown = "warn"
empty_line_after_doc_comments = "warn"
empty_line_after_outer_attr = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
from_iter_instead_of_collect = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_with_drain = "warn"
iter_without_into_iter = "warn"
large_stack_frames = "warn"
manual_assert = "warn"
manual_clamp = "warn"
manual_is_variant_and = "warn"
manual_string_new = "warn"
match_same_arms = "warn"
missing-const-for-fn = "warn"
mutex_integer = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
option_as_ref_cloned = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
result_large_err = "allow"
redundant_clone = "warn"
redundant_else = "warn"
single_char_pattern = "warn"
string_lit_as_bytes = "warn"
string_lit_chars_any = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
type_repetition_in_bounds = "warn"
uninhabited_references = "warn"
unnecessary_self_imports = "warn"
unnecessary_struct_initialization = "warn"
unnested_or_patterns = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
use_self = "warn"
useless_let_if_seq = "warn"
while_float = "warn"
zero_sized_map_values = "warn"


[workspace.dependencies]

# local dependencies
witness-generator = { path = "crates/witness-generator" }
zkevm-metrics = { path = "crates/metrics" }
benchmark-runner = { path = "crates/benchmark-runner" }

# ere
ere-zkvm-interface = { git = "https://github.com/eth-act/ere", tag = "v0.2.0", package = "ere-zkvm-interface" }
ere-dockerized = { git = "https://github.com/eth-act/ere", tag = "v0.2.0", package = "ere-dockerized" }
ere-io = { git = "https://github.com/eth-act/ere", tag = "v0.2.0", package = "ere-io" }

# ere-guests
ere-guests-block-encoding-length = { git = "https://github.com/eth-act/ere-guests", rev = "885398bc1478e777096a8456bc925b2ab28a8d0f", package = "block-encoding-length" }
ere-guests-stateless-validator-reth = { git = "https://github.com/eth-act/ere-guests", rev = "885398bc1478e777096a8456bc925b2ab28a8d0f", package = "stateless-validator-reth" }
ere-guests-stateless-validator-ethrex = { git = "https://github.com/eth-act/ere-guests", rev = "885398bc1478e777096a8456bc925b2ab28a8d0f", package = "stateless-validator-ethrex" }
ere-guests-guest = { git = "https://github.com/eth-act/ere-guests", rev = "885398bc1478e777096a8456bc925b2ab28a8d0f", package = "guest" }
ere-guests-integration-tests = { git = "https://github.com/eth-act/ere-guests", rev = "885398bc1478e777096a8456bc925b2ab28a8d0f", package = "integration-tests" }
ere-guests-downloader = { git = "https://github.com/eth-act/ere-guests", rev = "885398bc1478e777096a8456bc925b2ab28a8d0f", package = "downloader" }

ef-tests = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-stateless = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }

# alloy
alloy-eips = { version = "1.4.3" }
alloy-rpc-types-eth = "1.4.3"
alloy-genesis = { version = "1.4.3", default-features = false }

# misc
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", default-features = false }
strum = { version = "0.26", features = ["derive"] }
walkdir = "2.3.3"
rayon = "1.7"
thiserror = "2"
sha2 = "0.10.9"
serde_json = "*"
serde_derive = "*"
jsonrpsee = "0.26.0"
anyhow = "1.0"
async-trait = "0.1.88"
tokio = { version = "1.45.1" }
tokio-util = "0.7.15"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
erased-serde = "0.4.8"
auto_impl = "1.3.0"
tempfile = "3.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots"] }
flate2 = "1.1"
tar = "0.4"
