[workspace]
members = [
    "crates/metrics",
    "crates/witness-generator",
    "crates/witness-generator-cli",
    "crates/ere-hosts",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.unused_crate_dependencies = "deny"
rustdoc.all = "warn"

[workspace.lints.clippy]
# These are some of clippy's nursery (i.e., experimental) lints that we like.
# By default, nursery lints are allowed. Some of the lints below have made good
# suggestions which we fixed. The others didn't have any findings, so we can
# assume they don't have that many false positives. Let's enable them to
# prevent future problems.
borrow_as_ptr = "warn"
branches_sharing_code = "warn"
clear_with_drain = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
dbg_macro = "warn"
derive_partial_eq_without_eq = "warn"
doc_markdown = "warn"
empty_line_after_doc_comments = "warn"
empty_line_after_outer_attr = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
from_iter_instead_of_collect = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_with_drain = "warn"
iter_without_into_iter = "warn"
large_stack_frames = "warn"
manual_assert = "warn"
manual_clamp = "warn"
manual_is_variant_and = "warn"
manual_string_new = "warn"
match_same_arms = "warn"
missing-const-for-fn = "warn"
mutex_integer = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
option_as_ref_cloned = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
result_large_err = "allow"
redundant_clone = "warn"
redundant_else = "warn"
single_char_pattern = "warn"
string_lit_as_bytes = "warn"
string_lit_chars_any = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
type_repetition_in_bounds = "warn"
uninhabited_references = "warn"
unnecessary_self_imports = "warn"
unnecessary_struct_initialization = "warn"
unnested_or_patterns = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
use_self = "warn"
useless_let_if_seq = "warn"
while_float = "warn"
zero_sized_map_values = "warn"


[workspace.dependencies]

# local dependencies
witness-generator = { path = "crates/witness-generator" }
zkevm-metrics = { path = "crates/metrics" }
benchmark-runner = { path = "crates/benchmark-runner" }

# ere
ere-zkvm-interface = { git = "https://github.com/eth-act/ere", rev = "3914a12f18b5f27807114048ae4829f3e999806b", package = "ere-zkvm-interface" }
ere-dockerized = { git = "https://github.com/eth-act/ere", rev = "3914a12f18b5f27807114048ae4829f3e999806b", package = "ere-dockerized" }
ere-io = { git = "https://github.com/eth-act/ere", rev = "3914a12f18b5f27807114048ae4829f3e999806b", package = "ere-io" }

# ere-guests
ere-guests-block-encoding-length = { git = "https://github.com/eth-act/ere-guests", tag = "v0.8.0", version = "0.8.0", package = "block-encoding-length" }
ere-guests-stateless-validator-reth = { git = "https://github.com/eth-act/ere-guests", tag = "v0.8.0", version = "0.8.0", package = "stateless-validator-reth" }
ere-guests-stateless-validator-ethrex = { git = "https://github.com/eth-act/ere-guests", tag = "v0.8.0", version = "0.8.0", package = "stateless-validator-ethrex" }
ere-guests-guest = { git = "https://github.com/eth-act/ere-guests", tag = "v0.8.0", version = "0.8.0", package = "guest" }
ere-guests-integration-tests = { git = "https://github.com/eth-act/ere-guests", tag = "v0.8.0", version = "0.8.0", package = "integration-tests" }
ere-guests-downloader = { git = "https://github.com/eth-act/ere-guests", tag = "v0.8.0", version = "0.8.0", package = "downloader" }

reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", branch = "bal-devnet-3" }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", branch = "bal-devnet-3" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", branch = "bal-devnet-3" }
ef-tests = { git = "https://github.com/paradigmxyz/stateless", branch = "bal-devnet-3" }
stateless = { git = "https://github.com/paradigmxyz/stateless", branch = "bal-devnet-3", default-features = false }

# alloy
alloy-eips = { version = "1.5" }
alloy-rpc-types-eth = "1.5"
alloy-genesis = { version = "1.5", default-features = false }

# misc
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", default-features = false }
strum = { version = "0.26", features = ["derive"] }
walkdir = "2.3.3"
rayon = "1.7"
thiserror = "2"
sha2 = "0.10.9"
serde_json = "*"
serde_derive = "*"
jsonrpsee = "0.26.0"
anyhow = "1.0"
async-trait = "0.1.88"
tokio = { version = "1.45.1" }
tokio-util = "0.7.15"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
erased-serde = "0.4.8"
auto_impl = "1.3.0"
tempfile = "3.10"
humantime = "2.1"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls-native-roots",
] }
flate2 = "1.1"
tar = "0.4"
toml = "0.8"

[patch.crates-io]
# Keep the revm/alloy stack aligned with the BAL devnet branches used by
# stateless, reth, and ere-guests.
revm = { git = "https://github.com/bluealloy/revm", rev = "30e1c40" }
revm-bytecode = { git = "https://github.com/bluealloy/revm", rev = "30e1c40" }
revm-context = { git = "https://github.com/bluealloy/revm", rev = "30e1c40" }
revm-context-interface = { git = "https://github.com/bluealloy/revm", rev = "30e1c40" }
revm-database = { git = "https://github.com/bluealloy/revm", rev = "30e1c40" }
revm-database-interface = { git = "https://github.com/bluealloy/revm", rev = "30e1c40" }
revm-handler = { git = "https://github.com/bluealloy/revm", rev = "30e1c40" }
revm-inspector = { git = "https://github.com/bluealloy/revm", rev = "30e1c40" }
revm-inspectors = { git = "https://github.com/paradigmxyz/revm-inspectors", rev = "24becc3" }
revm-interpreter = { git = "https://github.com/bluealloy/revm", rev = "30e1c40" }
revm-precompile = { git = "https://github.com/bluealloy/revm", rev = "30e1c40" }
revm-primitives = { git = "https://github.com/bluealloy/revm", rev = "30e1c40" }
revm-state = { git = "https://github.com/bluealloy/revm", rev = "30e1c40" }
alloy-evm = { git = "https://github.com/alloy-rs/evm", branch = "bal-devnet3" }
alloy-consensus = { git = "https://github.com/alloy-rs/alloy", branch = "bal-devnet2" }
alloy-consensus-any = { git = "https://github.com/alloy-rs/alloy", branch = "bal-devnet2" }
alloy-eips = { git = "https://github.com/alloy-rs/alloy", branch = "bal-devnet2" }
alloy-genesis = { git = "https://github.com/alloy-rs/alloy", branch = "bal-devnet2" }
alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy", branch = "bal-devnet2" }
alloy-network = { git = "https://github.com/alloy-rs/alloy", branch = "bal-devnet2" }
alloy-network-primitives = { git = "https://github.com/alloy-rs/alloy", branch = "bal-devnet2" }
alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy", branch = "bal-devnet2" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", branch = "bal-devnet2" }
alloy-rpc-types-admin = { git = "https://github.com/alloy-rs/alloy", branch = "bal-devnet2" }
alloy-rpc-types-anvil = { git = "https://github.com/alloy-rs/alloy", branch = "bal-devnet2" }
alloy-rpc-types-any = { git = "https://github.com/alloy-rs/alloy", branch = "bal-devnet2" }
alloy-rpc-types-beacon = { git = "https://github.com/alloy-rs/alloy", branch = "bal-devnet2" }
alloy-rpc-types-debug = { git = "https://github.com/alloy-rs/alloy", branch = "bal-devnet2" }
alloy-rpc-types-engine = { git = "https://github.com/alloy-rs/alloy", branch = "bal-devnet2" }
alloy-rpc-types-eth = { git = "https://github.com/alloy-rs/alloy", branch = "bal-devnet2" }
alloy-rpc-types-mev = { git = "https://github.com/alloy-rs/alloy", branch = "bal-devnet2" }
alloy-rpc-types-trace = { git = "https://github.com/alloy-rs/alloy", branch = "bal-devnet2" }
alloy-rpc-types-txpool = { git = "https://github.com/alloy-rs/alloy", branch = "bal-devnet2" }
alloy-serde = { git = "https://github.com/alloy-rs/alloy", branch = "bal-devnet2" }
alloy-signer = { git = "https://github.com/alloy-rs/alloy", branch = "bal-devnet2" }
alloy-signer-local = { git = "https://github.com/alloy-rs/alloy", branch = "bal-devnet2" }
alloy-transport = { git = "https://github.com/alloy-rs/alloy", branch = "bal-devnet2" }
alloy-transport-http = { git = "https://github.com/alloy-rs/alloy", branch = "bal-devnet2" }
alloy-tx-macros = { git = "https://github.com/alloy-rs/alloy", branch = "bal-devnet2" }
op-alloy-consensus = { git = "https://github.com/alloy-rs/op-alloy", branch = "bal-devnet2" }

[patch."https://github.com/eth-act/ere-guests"]
block-encoding-length = { git = "https://github.com/jsign/ere-guests", branch = "bal-devnet-3" }
stateless-validator-reth = { git = "https://github.com/jsign/ere-guests", branch = "bal-devnet-3" }
stateless-validator-ethrex = { git = "https://github.com/jsign/ere-guests", branch = "bal-devnet-3" }
guest = { git = "https://github.com/jsign/ere-guests", branch = "bal-devnet-3" }
integration-tests = { git = "https://github.com/jsign/ere-guests", branch = "bal-devnet-3" }
downloader = { git = "https://github.com/jsign/ere-guests", branch = "bal-devnet-3" }
